Fix overflow scroll on player list

--- a/src/styles/playerList.css
+++ b/src/styles/playerList.css
@@ -6,7 +6,6 @@
     font-size: 1.2em;
     font-weight: 500;
     gap: 0.3em;
-    padding:2px /* PQ necesito esto para evitar que se vea el scroll aunq no llegue al max */
 }
 
 .player {
@@ -23,7 +22,6 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    margin-right: 20px;
 }
 
 .player .localPlayer {
@@ -43,17 +41,16 @@
 
 .player .name {
     flex: 1;
-    text-align: left;
+    text-align: center;
 }
 
 .player .ownerIcon {
     margin-left: -4px;
     margin-top: -3px;
-    font-size: 27px;
 }
 
 .player .ownerIcon-bg {
-    width: 17px;
+    width: 15px;
     height: 17px;
     position: absolute;
     bottom: 12px;
